--- a/src/app/admin/view-doctors/view-doctors.component.html
+++ b/src/app/admin/view-doctors/view-doctors.component.html
@@ -2,22 +2,33 @@
   <h2 class="text-center text-info mb-4">List of Doctors</h2>
 
   <table class="table table-bordered table-striped">
-    <thead>
+    <thead class="table-info text-center">
       <tr>
-        <th>#</th>
+        <th>Doctor Id</th>
         <th>Name</th>
         <th>Specialization</th>
-        <th>Phone</th>
-        <th>Email</th>
+        <th>Experience</th>
+        <th>Timings</th>
+        <th>Actions</th>
       </tr>
     </thead>
-    <tbody>
+    <tbody class="text-center">
       <tr *ngFor="let doctor of doctors; let i = index">
         <td>{{ i + 1 }}</td>
         <td>{{ doctor.doctorName }}</td>
         <td>{{ doctor.specialization }}</td>
         <td>{{ doctor.experience }}</td>
         <td>{{ doctor.timings }}</td>
+        <td>
+          <button class="btn btn-warning btn-sm me-2"
+                  [routerLink]="['/admin/update-doctor', doctor.doctorId]">
+            Update
+          </button>
+          <button class="btn btn-danger btn-sm"
+                  (click)="deleteDoctor(doctor.doctorId)">
+            Delete
+          </button>
+        </td>
       </tr>
     </tbody>
   </table>
