--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container py-5">
-  <h2 class="text-center text-primary mb-4">Welcome, {{ role }} 🎉</h2>
+  <h2 class="text-center text-primary mb-4">Welcome, {{ role }} </h2>
 
   <!-- ADMIN Section -->
   <div *ngIf="role === 'ADMIN'" class="row g-4 justify-content-center">
