--- a/src/app/admin/view-doctors/view-doctors.component.html
+++ b/src/app/admin/view-doctors/view-doctors.component.html
@@ -24,10 +24,10 @@
                   [routerLink]="['/admin/update-doctor', doctor.doctorId]">
             Update
           </button>
-          <button class="btn btn-danger btn-sm"
-                  (click)="deleteDoctor(doctor.doctorId)">
-            Delete
-          </button>
+          <button class="btn btn-danger btn-sm" (click)="deleteDoctor(doctor.doctorId)">
+  Delete
+</button>
+
         </td>
       </tr>
     </tbody>
