--- a/src/app/admin/update-medicine/update-medicine.component.html
+++ b/src/app/admin/update-medicine/update-medicine.component.html
@@ -4,7 +4,7 @@
   <form [formGroup]="medicineForm" (ngSubmit)="onSubmit()">
   <div class="mb-3">
     <label class="form-label">Medicine Name</label>
-    <input type="text" class="form-control" formControlName="medicineName" />
+    <input type="text" class="form-control" formControlName="name" />
   </div>
 
   <div class="mb-3">
@@ -18,8 +18,8 @@
   </div>
 
   <div class="mb-3">
-    <label class="form-label">Quantity</label>
-    <input type="number" class="form-control" formControlName="quantity" />
+    <label class="form-label">Quantity Left</label>
+    <input type="number" class="form-control" formControlName="quantityLeft" />
   </div>
 
   <button class="btn btn-success w-100" type="submit">Update</button>
