--- a/src/app/admin/view-medicines/view-medicines.component.html
+++ b/src/app/admin/view-medicines/view-medicines.component.html
@@ -4,7 +4,7 @@
   <table class="table table-bordered table-hover">
     <thead class="table-success">
       <tr>
-        <th>#</th>
+        <th>Medicine Id</th>
         <th>Name</th>
         <th>Description</th>
         <th>Price</th>
