--- a/src/app/admin/register-doctor/register-doctor.component.html
+++ b/src/app/admin/register-doctor/register-doctor.component.html
@@ -13,14 +13,36 @@
     </div>
 
     <div class="mb-3">
-      <label for="experience">Experience</label>
-      <input type="text" class="form-control" formControlName="experience">
+  <label for="experience">Experience</label>
+  <input
+    type="text"
+    id="experience"
+    class="form-control"
+    formControlName="experience"
+    pattern="^[1-9][0-9]*$"
+    maxlength="2"
+    (keypress)="allowOnlyDigits($event)"
+  />
+  <div
+    *ngIf="doctorForm.get('experience')?.invalid && (doctorForm.get('experience')?.dirty || doctorForm.get('experience')?.touched)"
+    class="text-danger mt-1"
+  >
+    <div *ngIf="doctorForm.get('experience')?.errors?.['pattern']">
+      Experience must not start with 0 and should be a number.
     </div>
+    <div *ngIf="doctorForm.get('experience')?.errors?.['required']">
+      Experience is required.
+    </div>
+  </div>
+</div>
+
+
 
     <div class="mb-3">
-      <label for="timings">Timings</label>
-      <input type="text" class="form-control" formControlName="timings">
-    </div>
+  <label for="timings">Timings</label>
+  <input type="time" class="form-control" formControlName="timings">
+</div>
+
 
     <button type="submit" class="btn btn-primary w-100">Register</button>
   </form>
