--- a/src/app/components/appointments/update-appointment/update-appointment.component.html
+++ b/src/app/components/appointments/update-appointment/update-appointment.component.html
@@ -2,10 +2,17 @@
   <h3 class="text-center text-success mb-4">Update Appointment</h3>
 
   <form [formGroup]="appointmentForm" (ngSubmit)="updateAppointment()">
-    <div class="mb-3">
-      <label class="form-label">Appointment Date</label>
-      <input type="date" class="form-control" formControlName="appointmentDate">
-    </div>
+     <div class="mb-3">
+  <label class="form-label">Appointment Date</label>
+  <input
+    type="date"
+    class="form-control"
+    formControlName="appointmentDate"
+    [min]="getTodayDate()"
+    required
+  />
+</div>
+
     <div class="mb-3">
       <label class="form-label">Appointment Time</label>
       <input type="time" class="form-control" formControlName="appointmentTime">
