--- a/src/app/components/prescription/prescription.component.html
+++ b/src/app/components/prescription/prescription.component.html
@@ -1,8 +1,8 @@
 <div class="container py-5">
   <h2 class="text-center text-success mb-4">Prescription Section</h2>
 
-  <div class="row justify-content-center">
-   <!-- Create Prescription -->
+  <!-- <div class="row justify-content-center">
+  \Create Prescription 
 <div class="col-md-4 mb-3">
   <div class="card shadow border-success h-100 text-center">
     <div class="card-body">
@@ -14,7 +14,7 @@
       </button>
     </div>
   </div>
-</div>
+</div> -->
 
 
     <!-- View Prescriptions -->
@@ -29,4 +29,4 @@
       </div>
     </div>
   </div>
-</div>
+
