--- a/src/app/admin/medicine-dashboard/medicine-dashboard.component.html
+++ b/src/app/admin/medicine-dashboard/medicine-dashboard.component.html
@@ -9,8 +9,6 @@
           <i class="bi bi-plus-square fs-1 text-success mb-3"></i>
           <h5 class="card-title">Add Medicine</h5>
           <a routerLink="/admin/add-medicine" class="btn btn-outline-info mt-2 w-100">Add Medicine</a>
-
-
         </div>
       </div>
     </div>
@@ -21,7 +19,23 @@
         <div class="card-body">
           <i class="bi bi-eye fs-1 text-primary mb-3"></i>
           <h5 class="card-title">View Medicines</h5>
-          <a routerLink="/admin/view-medicines" class="btn btn-outline-primary w-100">View</a>
+          <a routerLink="/admin/view-medicines" class="btn btn-outline-primary mt-2 w-100">View</a>
+        </div>
+      </div>
+    </div>
+
+    <!-- Upload CSV -->
+    <div class="col-md-4 mb-3">
+      <div class="card shadow border-warning h-100 text-center">
+        <div class="card-body">
+          <i class="bi bi-upload fs-1 text-warning mb-3"></i>
+          <h5 class="card-title">Add Bulk Medicines</h5>
+
+          <!-- Hidden File Input -->
+          <input type="file" id="fileInput" accept=".csv" hidden (change)="onFileSelected($event)" />
+
+          <!-- Trigger Button -->
+          <button class="btn btn-outline-warning mt-2 w-100" (click)="triggerFileInput()">Upload CSV</button>
         </div>
       </div>
     </div>
