--- a/src/app/components/bill/view-bills/view-bills.component.html
+++ b/src/app/components/bill/view-bills/view-bills.component.html
@@ -13,7 +13,7 @@
           <th>Medicine Charges</th>
           <th>Total Amount</th>
           <th>Bill Date</th>
-          <th>Actions</th>
+          <th>Action</th>
         </tr>
       </thead>
 
